--- a/Views/Home/webComplaints.cshtml
+++ b/Views/Home/webComplaints.cshtml
@@ -2,28 +2,28 @@
 
 <form method="post" asp-action="SubmitForm" asp-controller="webComplaints">
     <div class="form-group">
-        <label asp-for="ComplaintFname">First Name:</label>
-        <input asp-for="ComplaintFname" class="form-control" />
+        <label asp-for="webComplaintFname">First Name:</label>
+        <input asp-for="webComplaintFname" class="form-control" />
     </div>
     <div class="form-group">
-        <label asp-for="ComplaintLname">Last Name:</label>
-        <input asp-for="ComplaintLname" class="form-control" />
+        <label asp-for="webComplaintLname">Last Name:</label>
+        <input asp-for="webComplaintLname" class="form-control" />
     </div>
     <div class="form-group">
-        <label asp-for="ComplaintEmail">Email:</label>
-        <input asp-for="ComplaintEmail" class="form-control" />
+        <label asp-for="webComplaintEmail">Email:</label>
+        <input asp-for="webComplaintEmail" class="form-control" />
     </div>
     <div class="form-group">
-        <label asp-for="ComplaintMnumber">Mobile Number:</label>
-        <input asp-for="ComplaintMnumber" class="form-control" />
+        <label asp-for="webComplaintMnumber">Mobile Number:</label>
+        <input asp-for="webComplaintMnumber" class="form-control" />
     </div>
     <div class="form-group">
-        <label asp-for="ComplaintDetails">Complaint Details:</label>
-        <textarea asp-for="ComplaintDetails" class="form-control"></textarea>
+        <label asp-for="webComplaintDetails">Complaint Details:</label>
+        <textarea asp-for="webComplaintDetails" class="form-control"></textarea>
     </div>
     <div class="form-group">
-        <label asp-for="ComplaintIP">IP Address:</label>
-        <input asp-for="ComplaintIP" class="form-control" />
+        <label asp-for="webComplaintIP">IP Address:</label>
+        <input asp-for="webComplaintIP" class="form-control" />
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
