Dashboard GetAPI call inplementation

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -74,7 +74,7 @@
     </div>
 
     <div class="login-container">
-        <form class="login-form" method="post" asp-action="LoginTag" asp-controller="Index">
+        <form class="login-form" method="post" asp-action="LoginTag" asp-controller="Home">
             <h2>Login</h2>
             <div class="input-group">
                 <label for="username">Username</label>
