--- a/Views/Dashboard.cshtml
+++ b/Views/Dashboard.cshtml
@@ -1,4 +1,4 @@
-﻿@model DashboardModel
+﻿@model List<Project_2_Web_App.Models.webComplaintsModel>
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
@@ -47,7 +47,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var complaint in Model.ComplaintList)
+            @foreach (var complaint in Model)
             {
                 <tr>
                     <td>@complaint.webComplaintFname</td>
